Sean Quinn Completed Blue Print Test

--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
+  },
+  "overrides": {
+    "react-scripts":{
+      "typescript":"^5"
+    }
   }
 }
